--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Increment the base filename",
   "main": "index.js",
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/subpopular/increment-file"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
